k8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-home-service
spec:
  selector:
    app: myapp-home
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: myapp-mobile-service
spec:
  selector:
    app: myapp-mobile
  ports:
  - port: 80
    targetPort: 80
